--- a/index.html
+++ b/index.html
@@ -4,32 +4,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Healthcare Haven - Professional Home Health Services</title>
-    <meta name="description" content="Healthcare Haven provides professional healthcare services at your doorstep including regular health checkups, elderly care, and post-surgery care by certified medical professionals." />
-    <meta name="author" content="Healthcare Haven" />
-    <meta name="keywords" content="healthcare, home health services, home healthcare, elderly care, caretakers, health checkups, medical services at home, post-surgery care, HIPAA compliant" />
+    <title>Yashocare Health Care Services</title>
+    <meta name="description" content="Yashocare provides professional healthcare services at your doorstep including regular health checkups, elderly care, and post-surgery care by certified medical professionals." />
+    <meta name="author" content="Yashocare" />
+    <meta name="keywords" content="yashocare, home health services, home healthcare, elderly care, caretakers, health checkups, medical services at home, post-surgery care, cancer patient care, home nursing, nurse practioner, care taker" />
 
-    <meta property="og:title" content="Healthcare Haven - Professional Home Health Services" />
-    <meta property="og:description" content="Quality healthcare services at your doorstep by certified medical professionals. We offer health checkups, elderly care, and post-surgery care." />
+    <meta property="og:title" content="Yashocare - Professional Home Health Services" />
+    <meta property="og:description" content="Quality healthcare services at your doorstep by certified medical professionals. We offer health checkups, elderly care, cancer patient care and post-surgery care." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@healthcare_haven" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <link rel="canonical" href="https://healthcarehaven.com" />
     
     <!-- Structured data for healthcare service -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "MedicalOrganization",
-        "name": "Healthcare Haven",
-        "url": "https://healthcarehaven.com",
-        "logo": "https://healthcarehaven.com/logo.png",
+        "name": "Yashocare",
         "description": "Professional healthcare services at your doorstep including regular health checkups, elderly care, and post-surgery care by certified medical professionals.",
-        "telephone": "+1-800-123-4567",
         "medicalSpecialty": ["Primary care", "Elder care", "Post-operative care"],
         "availableService": [
           {
@@ -54,13 +44,9 @@
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
-    <!-- Security Operations Center Monitoring Tag -->
     <script type="text/javascript">
-      console.log("Healthcare Haven SOC Monitoring Active - HIPAA Compliant");
-      // This would typically connect to actual monitoring services
     </script>
   </body>
 </html>
