--- a/website/index.html
+++ b/website/index.html
@@ -7,7 +7,7 @@
     <title>Yashocare Health Care Services</title>
     <meta name="description" content="Yashocare provides professional healthcare services at your doorstep including regular health checkups, elderly care, and post-surgery care by certified medical professionals." />
     <meta name="author" content="Yashocare" />
-    <meta name="keywords" content="yashocare, home health services, home healthcare, elderly care, caretakers, health checkups, medical services at home, post-surgery care, cancer patient care, home nursing, nurse practioner, care taker" />
+    <meta name="keywords" content="yashocare, home health services, home healthcare, elderly care, caretakers, health checkups, medical services at home, post-surgery care, cancer patient care, home nursing, nurse practitioner, care taker" />
 
     <meta property="og:title" content="Yashocare - Professional Home Health Services" />
     <meta property="og:description" content="Quality healthcare services at your doorstep by certified medical professionals. We offer health checkups, elderly care, cancer patient care and post-surgery care." />
